@@ -1,3 +1,9 @@
+2001-12-18  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
+
+	* readelf.c (get_machine_flags): Recognize header flags for ABI and
+	ASE extensions. More robust code for ISA checking. Ignore empty fields
+	in header flags for GNU extensions.
+
 2001-12-18  Alan Modra  <amodra@bigpond.net.au>
 
 	* objcopy.c (copy_archive): Set output bfd format outside the loop.
